--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
 .display {
-    width: 280px;
+    width: 266px;
     height: 120px;
+    color: black;
     background-color: rgb(190, 190, 190);
     border: none;
     border-radius: 0px 0px 40px 40px;
@@ -23,8 +24,10 @@
 }
 
 .calculadora {
-    justify-content: center;
-    align-items: center;
+    padding: 30px;
+    padding-top: 0px;
+    border-radius: 30px;
+    background-color: rgb(30, 30, 30);
 }
 
 .btn {
@@ -69,7 +72,7 @@
     border-radius: 30px;
     border: none;
     color: white;
-    background-color: rgb(110, 110, 110);
+    background-color: rgb(120, 120, 120);
     font-weight: bold;
     cursor: pointer;
     margin: 2px;
@@ -89,25 +92,25 @@
 
 .btn:hover{
     color: black;
-    background-color: rgb(197, 208, 219);
+    background-color: rgb(200, 210, 210);
 }
 
 .btn-op:hover{
     color: black;
-    background-color: rgb(197, 208, 219);
+    background-color: rgb(200, 210, 210);
 }
 
 .btn-igual:hover{
     color: black;
-    background-color: rgb(197, 208, 219);
+    background-color: rgb(200, 210, 210);
 }
 
 .btn-CE:hover{
     color: black;
-    background-color: rgb(197, 208, 219);
+    background-color: rgb(200, 210, 210);
 }
 
 .btn-C:hover{
     color: black;
-    background-color: rgb(197, 208, 219);
+    background-color: rgb(200, 210, 210);
 }
