--- a/style.css
+++ b/style.css
@@ -15,12 +15,14 @@
     width: 266px;
     height: 120px;
     color: black;
+    font-size: 30px;
     background-color: rgb(190, 190, 190);
     border: none;
     border-radius: 0px 0px 40px 40px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
-    -5px -5px 10px rgba(0, 0, 0, 0.1);;
+    -5px -5px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
+    padding: 10px;
 }
 
 .calculadora {
@@ -63,7 +65,7 @@
     background-color: rgb(30, 0, 130);
     font-weight: bold;
     cursor: pointer;
-    margin: 2px;
+    margin: 1px;
 }
 
 .btn-C {
@@ -87,7 +89,7 @@
     background-color: rgb(60, 60, 60);
     font-weight: bold;
     cursor: pointer;
-    margin: 2px;
+    margin: 1px;
 }
 
 .btn:hover{
